--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^1.4.2",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "ebay-api": "^0.1.1",
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
+    "request": "^2.61.0",
     "sequelize": "^3.7.1",
     "sequelize-cli": "^1.9.0",
     "serve-favicon": "~2.3.0",
