--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "sequelize-cli": "^1.9.0",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.3.6",
-    "sqlite3": "^3.0.10"
+    "sqlite3": "^3.0.10",
+    "twin-bcrypt": "*"
   }
 }
